--- a/styles.css
+++ b/styles.css
@@ -1,46 +1,85 @@
-* {
-  box-sizing: border-box;
+body {
+    margin: 0;
 }
 
-body {
-  margin: 0;
-  font-family: system-ui, sans-serif;
-  color: black;
-  background-color: white;
+
+header {
+    background-color: aliceblue;
+    border: solid 1px black;
+    position: sticky;
+    top: 0;
 }
 
 nav {
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  justify-content: center;
-  padding: 0.5rem;
-  gap: 0.5rem;
-  border-bottom: solid 1px #aaa;
-  background-color: #eee;
+    display: flex;
+    justify-content: space-around;
+    font-size: 25px;
 }
 
-nav a {
-  display: inline-block;
-  min-width: 9rem;
-  padding: 0.5rem;
-  border-radius: 0.2rem;
-  border: solid 1px #aaa;
-  text-align: center;
-  text-decoration: none;
-  color: #555;
+
+.image-box {
+    width: 50%;
+    border-radius: 10%;
 }
 
-nav a[aria-current='page'] {
-  color: #000;
-  background-color: #d4d4d4;
+.text-box {
+    width: 50%;
+    margin: 50px;
 }
 
-main {
-  padding: 1rem;
+.Velkommen {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center; 
 }
 
-h1 {
-  font-weight: bold;
-  font-size: 1.5rem;
+.første {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
+
+
+.ank{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+
+.tredje {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    padding-top: 150px;
+    padding-bottom: 150px;
+}
+
+.fjerde {
+    display: flex;
+    flex-direction: column-reverse;
+    justify-content: center;
+    align-items: center;
+}
+
+.p1{
+    border: solid 1px black;
+    border-radius: 8px;
+}
+ .p2 {
+    border: solid 1px black;
+    border-radius: 8px;
+ }
+
+ .p3 {
+    border: solid 1px black;
+    border-radius: 8px;
+ }
+
+ footer {
+    justify-content: space-evenly;
+    border-top: solid black 3px;
+    display: flex;
+ }
