--- a/styles.css
+++ b/styles.css
@@ -90,3 +90,24 @@ nav {
     border-top: solid black 3px;
     display: flex;
  }
+
+ @media (max-width: 769px){
+    .tredje {
+        display: flex;
+        flex-direction: column;
+    }
+ }
+
+ @media (max-width: 426px){
+    .Velkommen, .første, .ank, .tredje, .fjerde
+    {
+        display: flex;
+        flex-direction: column;
+    }
+    nav{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+ }
+
